# form-bakery

./: .gitignore  CHANGELOG.md  README.md  cabal-ghcjs.project  cabal.project  default.nix  index.html  mark.cabal  mark.hs
backend/: backend.cabal
common/: common.cabal
common/src/: Common.hs  Markup.hs
dist-ghcjs/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-ghcjs/packagedb/ghcjs-8.4.0.1/: common-0.1.0.0-inplace.conf  package.cache
form-bakery/common/: common.cabal
form-bakery/common/src/Common/: Api.hs  Common.hs
form-bakery/frontend/: frontend.cabal
form-bakery/frontend/src/: CalculusAsLogic.hs  Frontend.hs  Index.hs  Main.hs  Markup.hs
form-bakery/static/: mark.css
frontend/: LICENSE  frontend.cabal
frontend/css/: mark.css
frontend/src/: CalculusAsLogic.hs  Index.hs  Introduction.hs  Main.hs  Markup.hs
src/: Main.hs
test/: Test.hs  test.cabal
test/src/: Test.hs
